Added a related problem (GR1777-078)

--- a/Electrodynamics/poynting_vector.ipynb
+++ b/Electrodynamics/poynting_vector.ipynb
@@ -24,13 +24,23 @@
     "## Poynting Vector\n",
     "\n",
     "\n",
-    "The rate of flow of energy crossing a unit area\n",
+    "The directional energy flux (energy transfer per unit area per unit time) of the electromagnetic field\n",
     "\n",
     "\n",
     "$$ \\large \\vec{S} = \\frac{1}{\\mu_0} \\vec{E} \\times \\vec{B} $$\n",
     "\n",
     "\n",
-    "$$ \\large S_\\text{avg} = \\frac{E_\\text{max} B_\\text{max}}{2\\mu_0} $$"
+    "$$ \\large S_\\text{avg} = \\frac{E_\\text{max} B_\\text{max}}{2\\mu_0} $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Direction\n",
+    "\n",
+    "Use the right-hand rule\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [078](https://study-astrophysics.com/gr1777-078/)"
    ]
   },
   {
@@ -69,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
