--- a/CondensedMatter/meissner_effect.ipynb
+++ b/CondensedMatter/meissner_effect.ipynb
@@ -5,15 +5,29 @@
    "id": "6b2e838c",
    "metadata": {},
    "source": [
-    "# Meissner Effect in Superconductor"
+    "# [Meissner Effect in Superconductor](https://study-astrophysics.com/meissner-effect/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17ec11ab",
+   "id": "1a882761",
    "metadata": {},
    "source": [
-    "Magnetic field should be tangential to the surface."
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fd7ed77",
+   "metadata": {},
+   "source": [
+    "## Meissner Effect\n",
+    "\n",
+    "Magnetic field should be tangential to the surface.\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [077](https://study-astrophysics.com/gr1777-077/)"
    ]
   }
  ],
@@ -33,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
