--- a/Electrodynamics/electric_force.ipynb
+++ b/Electrodynamics/electric_force.ipynb
@@ -36,7 +36,8 @@
     "\n",
     "\n",
     "\n",
-    "### Unit Analysis"
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [076](https://study-astrophysics.com/gr1777-076/)"
    ]
   }
  ],
@@ -56,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
