--- a/Electrodynamics/magnetic_force.ipynb
+++ b/Electrodynamics/magnetic_force.ipynb
@@ -39,7 +39,8 @@
     "\n",
     "\n",
     "\n",
-    "### Unit Analysis"
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [076](https://study-astrophysics.com/gr1777-076/)"
    ]
   },
   {
@@ -98,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
