--- a/Optics/braggs_law.ipynb
+++ b/Optics/braggs_law.ipynb
@@ -45,8 +45,8 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777: Problem [098](https://study-astrophysics.com/gr1777-098/)\n",
-    "- GRE Physics GR0877: Problem 052"
+    "- GRE Physics GR1777 Problems [075](https://study-astrophysics.com/gr1777-075/) and [098](https://study-astrophysics.com/gr1777-098/) \n",
+    "- GRE Physics GR0877 Problem 052"
    ]
   },
   {
@@ -66,7 +66,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
