--- a/QuantumMechanics/matter_wave.ipynb
+++ b/QuantumMechanics/matter_wave.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "## de Broglie Wavelength\n",
     "\n",
+    "\n",
     "$$ \\large \\begin{split}\n",
     "\\lambda & \\ = \\frac{h}{p} \\ = \\ \\frac{2\\pi\\hbar}{p} \\\\\n",
     "& \\ = \\frac{h}{\\sqrt{2mE}} \\quad ( \\text{when } E = \\frac{p^2}{2m} ) \\\\\n",
@@ -32,7 +33,8 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0177: Problem 046"
+    "- GRE Physics GR1777 Problem [075](https://study-astrophysics.com/gr1777-075/)\n",
+    "- GRE Physics GR0177 Problem 046"
    ]
   }
  ],
@@ -52,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
