--- a/ParticlePhysics/standard_model.ipynb
+++ b/ParticlePhysics/standard_model.ipynb
@@ -5,7 +5,15 @@
    "id": "dad38125",
    "metadata": {},
    "source": [
-    "# Standard Model of Particle Physics"
+    "# [Standard Model of Particle Physics](https://study-astrophysics.com/standard-model-of-particle-physics/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a241f0e6",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -13,7 +21,20 @@
    "id": "f9d7ae8c",
    "metadata": {},
    "source": [
-    "Insert the diagram"
+    "![title](https://upload.wikimedia.org/wikipedia/commons/b/b7/Standard_Model_of_Elementary_Particles_%2B_Gravity.svg)\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "\n",
+    "- GRE Physics GR1777 Problem [073](https://study-astrophysics.com/gr1777-073/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f97d1d44",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -28,11 +49,22 @@
     "\n",
     "### Lepton Number Conservation\n",
     "\n",
-    "$$ \\mu \\rightarrow e^- + \\nu_\\mu + \\bar{\\nu_e}  \\quad \\Leftrightarrow \\quad 1 = 1 + 1 - 1 $$\n",
+    "$$ \\large \\mu \\rightarrow e^- + \\nu_\\mu + \\bar{\\nu_e}  \\quad \\Leftrightarrow \\quad 1 = 1 + 1 - 1 $$\n",
+    "\n",
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0177: Problem 078"
+    "\n",
+    "- GRE Physics GR1777 Problem [074](https://study-astrophysics.com/gr1777-074/)\n",
+    "- GRE Physics GR0177 Problem 078"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15708039",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -42,7 +74,20 @@
    "source": [
     "## Baryon\n",
     "\n",
-    "- 3 quarks"
+    "- 3 quarks\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "\n",
+    "- GRE Physics GR1777 Problem [074](https://study-astrophysics.com/gr1777-074/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2beb06b7",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -60,13 +105,15 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0877: Problem 073"
+    "\n",
+    "- GRE Physics GR1777 Problem [074](https://study-astrophysics.com/gr1777-074/)\n",
+    "- GRE Physics GR0877 Problem 073"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
