Added a related problem (gr1777-071)

--- a/QuantumMechanics/pauli_matrices.ipynb
+++ b/QuantumMechanics/pauli_matrices.ipynb
@@ -46,6 +46,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [071](https://study-astrophysics.com/gr1777-071/)\n",
     "- GRE Physics GR0877 Problem 087"
    ]
   },
@@ -88,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
