--- a/Optics/reflection.ipynb
+++ b/Optics/reflection.ipynb
@@ -82,7 +82,11 @@
     "## Reflection Coefficient\n",
     "\n",
     "\n",
-    "$$ \\large R = \\frac{(n_2 - n_1)^2}{(n_2 + n_1)^2} $$"
+    "$$ \\large R = \\frac{(n_2 - n_1)^2}{(n_2 + n_1)^2} $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [070](https://study-astrophysics.com/gr1777-070/)"
    ]
   },
   {
@@ -121,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
