--- a/Electrodynamics/faradays_law.ipynb
+++ b/Electrodynamics/faradays_law.ipynb
@@ -38,8 +38,9 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0177: Problem 086\n",
-    "- GRE Physics GR0877: Problem 070"
+    "- GRE Physics GR1777 Problem [069](https://study-astrophysics.com/gr1777-069/)\n",
+    "- GRE Physics GR0877 Problem 070\n",
+    "- GRE Physics GR0177 Problem 086\n"
    ]
   }
  ],
@@ -59,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
