--- a/ClassicalMechanics/hamiltonian.ipynb
+++ b/ClassicalMechanics/hamiltonian.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "\n",
+    "- GRE Physics GR1777 Problem [067](https://study-astrophysics.com/gr1777-067/)\n",
     "- GRE Physics GR0877 Problem 083"
    ]
   },
@@ -73,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
