--- a/ClassicalMechanics/springs.ipynb
+++ b/ClassicalMechanics/springs.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [097](https://study-astrophysics.com/gr1777-097/)"
+    "- GRE Physics GR1777 Problems [067](https://study-astrophysics.com/gr1777-067/) and [097](https://study-astrophysics.com/gr1777-097/)"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
