Added a related problem (gr1777-066)

--- a/ClassicalMechanics/springs.ipynb
+++ b/ClassicalMechanics/springs.ipynb
@@ -87,7 +87,11 @@
    "source": [
     "## Angluar Frequency\n",
     "\n",
-    "$$ \\large \\omega \\ = \\ \\sqrt{\\frac{k}{m}} \\ = \\ \\frac{2\\pi}{T} $$"
+    "$$ \\large \\omega \\ = \\ \\sqrt{\\frac{k}{m}} \\ = \\ \\frac{2\\pi}{T} $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [066](https://study-astrophysics.com/gr1777-066/)"
    ]
   },
   {
@@ -134,6 +138,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [066](https://study-astrophysics.com/gr1777-066/)\n",
     "- GRE Physics GR0177 Problem 090"
    ]
   }
@@ -154,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
