Added a related problem (gr1777-064)

--- a/ClassicalMechanics/mechanical_energy.ipynb
+++ b/ClassicalMechanics/mechanical_energy.ipynb
@@ -61,7 +61,11 @@
     "- $g$: gravity of Earth\n",
     "\n",
     "\n",
-    "- $h$: height"
+    "- $h$: height\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [064](https://study-astrophysics.com/gr1777-064/)"
    ]
   },
   {
