--- a/ClassicalMechanics/rotation.ipynb
+++ b/ClassicalMechanics/rotation.ipynb
@@ -5,7 +5,7 @@
    "id": "81ca32f0",
    "metadata": {},
    "source": [
-    "# [Rotation](https://study-astrophysics.com/rotations/)"
+    "# [Rotations](https://study-astrophysics.com/rotations/)"
    ]
   },
   {
@@ -137,7 +137,8 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0177: Problems 025 and 089"
+    "- GRE Physics GR1777 Problem [065](https://study-astrophysics.com/gr1777-065/)\n",
+    "- GRE Physics GR0177 Problems 025 and 089"
    ]
   },
   {
@@ -162,7 +163,11 @@
     "where \n",
     "\n",
     "\n",
-    "- $\\vec{\\alpha}$: angular acceleration"
+    "- $\\vec{\\alpha}$: angular acceleration\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [065](https://study-astrophysics.com/gr1777-065/)"
    ]
   },
   {
@@ -210,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
