Added a related problem (gr1777-063)

--- a/QuantumMechanics/angular_momentum_operator.ipynb
+++ b/QuantumMechanics/angular_momentum_operator.ipynb
@@ -133,8 +133,11 @@
     "\n",
     "where\n",
     "\n",
+    "- $i = x, y, z$\n",
     "\n",
-    "- $i = x, y, z$"
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physis GR1777 Problem [063](https://study-astrophysics.com/gr1777-063/)"
    ]
   },
   {
@@ -165,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
