Added a related problem (gr1777-062)

--- a/QuantumMechanics/qm_harmonic_oscillator.ipynb
+++ b/QuantumMechanics/qm_harmonic_oscillator.ipynb
@@ -145,6 +145,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [062](https://study-astrophysics.com/gr1777-062/)\n",
     "- GRE Physics GR0177 Problem 045"
    ]
   }
@@ -165,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
