--- a/QuantumMechanics/compton_scattering.ipynb
+++ b/QuantumMechanics/compton_scattering.ipynb
@@ -28,7 +28,16 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR0877: Problem 097"
+    "- GRE Physics GR1777 Problem [060](https://study-astrophysics.com/gr1777-060/)\n",
+    "- GRE Physics GR0877 Problem 097"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f1015f3",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -56,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
