Added a related problem (gr1777-068)

--- a/Electrodynamics/conductors.ipynb
+++ b/Electrodynamics/conductors.ipynb
@@ -36,7 +36,12 @@
     "- Charge accumulates at sharp points. \n",
     "\n",
     "\n",
-    "- Conductors do not transmit electromagnetic wave."
+    "- Conductors do not transmit electromagnetic wave.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [068]()"
    ]
   }
  ],
@@ -56,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
