--- a/Electrodynamics/conductors.ipynb
+++ b/Electrodynamics/conductors.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [068]()"
+    "- GRE Physics GR1777 Problem [068](https://study-astrophysics.com/gr1777-068/)"
    ]
   }
  ],
