Added a related problem (gr1777-058)

--- a/StatisticalMechanics/entropy.ipynb
+++ b/StatisticalMechanics/entropy.ipynb
@@ -36,7 +36,12 @@
     "- $Q$: heat\n",
     "\n",
     "\n",
-    "- $T$: temperture"
+    "- $T$: temperture\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [058](https://study-astrophysics.com/gr1777-058/)"
    ]
   },
   {
@@ -197,7 +202,7 @@
     "$$ \\large C_V \\ = \\ T \\left( \\frac{\\partial S}{\\partial T} \\right)_V $$\n",
     "\n",
     "\n",
-    "$$ \\large C_P \\ = \\ T \\left( \\frac{\\partial S}{\\partial T} \\right)_P $$"
+    "$$ \\large C_P \\ = \\ T \\left( \\frac{\\partial S}{\\partial T} \\right)_P $$\n"
    ]
   }
  ],
@@ -217,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
