--- a/StatisticalMechanics/laws_of_thermodynamics.ipynb
+++ b/StatisticalMechanics/laws_of_thermodynamics.ipynb
@@ -67,7 +67,12 @@
     "- $T$: temperature\n",
     "\n",
     "\n",
-    "- $dS$: change in entropy"
+    "- $dS$: change in entropy\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [058](https://study-astrophysics.com/gr1777-058/)"
    ]
   },
   {
@@ -92,7 +97,12 @@
     "$$ \\large dS = \\frac{dQ}{T} = c m \\frac{dT}{T} \\quad (\\because dQ = cmdT) $$\n",
     "\n",
     "\n",
-    "$$ \\large \\Delta S = \\int c m \\frac{dT}{T} = c m \\ln \\left( \\frac{T_f}{T_i} \\right) $$"
+    "$$ \\large \\Delta S = \\int c m \\frac{dT}{T} = c m \\ln \\left( \\frac{T_f}{T_i} \\right) $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [058](https://study-astrophysics.com/gr1777-058/)"
    ]
   },
   {
@@ -128,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
