--- a/StatisticalMechanics/thermodynamic_processes.ipynb
+++ b/StatisticalMechanics/thermodynamic_processes.ipynb
@@ -78,6 +78,26 @@
     "### Related Problems\n",
     "- GRE Physics GR0177: Problem 047"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d83e624",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca243871",
+   "metadata": {},
+   "source": [
+    "## Isochoric Process ($dV = 0$, constant volume)\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [058](https://study-astrophysics.com/gr1777-058/)"
+   ]
   }
  ],
  "metadata": {
@@ -96,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
