--- a/StatisticalMechanics/maxwell_boltzmann_distribution.ipynb
+++ b/StatisticalMechanics/maxwell_boltzmann_distribution.ipynb
@@ -18,6 +18,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85769778",
+   "metadata": {},
+   "source": [
+    "## Probability Density $f(E)$\n",
+    "\n",
+    "\n",
+    "$$ \\large f(E_i) = e^{-\\frac{E_i}{kT}} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11168eb0",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "52aee33e",
    "metadata": {},
    "source": [
@@ -43,6 +62,35 @@
     "\n",
     "$$ \\large Z = \\sum_i g_i e^{-E_i/kT} $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "280e0b6b",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173e20ad",
+   "metadata": {},
+   "source": [
+    "## Properties\n",
+    "\n",
+    "\n",
+    "- The average velocity of the atoms is zero.\n",
+    "\n",
+    "\n",
+    "- The distribution of the speeds of the atoms has a maximum at $v = \\sqrt{\\frac{2RT}{M}}$\n",
+    "\n",
+    "\n",
+    "- The probability of finding an atom with zero kinetic energy is zero.\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [057](https://study-astrophysics.com/gr1777-057/)"
+   ]
   }
  ],
  "metadata": {
@@ -61,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
