--- a/Optics/lens.ipynb
+++ b/Optics/lens.ipynb
@@ -44,7 +44,11 @@
     "- $d_i$: image distance\n",
     "\n",
     "    - Positive if object is real\n",
-    "    - Negative if object is virtual"
+    "    - Negative if object is virtual\n",
+    "    \n",
+    "    \n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [050](https://study-astrophysics.com/gr1777-050/)"
    ]
   },
   {
@@ -132,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
