--- a/Optics/spectrometer.ipynb
+++ b/Optics/spectrometer.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777: Problem 051"
+    "- GRE Physics GR1777 Problem [051](https://study-astrophysics.com/gr1777-051/)"
    ]
   }
  ],
@@ -47,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
