Added a related problem (gr1777-048)

--- a/ClassicalMechanics/mechanical_energy.ipynb
+++ b/ClassicalMechanics/mechanical_energy.ipynb
@@ -33,7 +33,11 @@
     "- $m$: mass\n",
     "\n",
     "\n",
-    "- $v$: speed (magnitude of the velocity)\n"
+    "- $v$: speed (magnitude of the velocity)\n",
+    "\n",
+    "\n",
+    "### Related problems \n",
+    "- GRE Physics GR1777 Problem [048](https://study-astrophysics.com/gr1777-048/)"
    ]
   },
   {
@@ -88,7 +92,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [087](https://study-astrophysics.com/gr1777-087/)"
+    "- GRE Physics GR1777 Problems [048](https://study-astrophysics.com/gr1777-048/), [087](https://study-astrophysics.com/gr1777-087/)"
    ]
   }
  ],
