--- a/ClassicalMechanics/rotation.ipynb
+++ b/ClassicalMechanics/rotation.ipynb
@@ -74,7 +74,11 @@
     "where \n",
     "\n",
     "\n",
-    "- $I$: moment of inertia."
+    "- $I$: moment of inertia.\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [048](https://study-astrophysics.com/gr1777-048/)"
    ]
   },
   {
