--- a/QuantumMechanics/1d_infinite_square_well.ipynb
+++ b/QuantumMechanics/1d_infinite_square_well.ipynb
@@ -119,6 +119,7 @@
     "\n",
     "\n",
     "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [044](https://study-astrophysics.com/gr1777-044/)\n",
     "- GRE Physics GR0877 Problem 085"
    ]
   },
@@ -214,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
