Added a related problem (gr1777-047)

--- a/FluidMechanics/buoyancy.ipynb
+++ b/FluidMechanics/buoyancy.ipynb
@@ -24,6 +24,8 @@
     "## Buoyancy\n",
     "\n",
     "\n",
+    "**Buoyancy force = weight of object in empty space − weight of object immersed in fluid**\n",
+    "\n",
     "$$\\large \\vec{F_b} \\ = \\ - \\rho g V $$\n",
     "\n",
     "\n",
@@ -43,9 +45,9 @@
     "\n",
     "\n",
     "### Related Problems\n",
-    "\n",
-    "- GRE Physics GR0877: Problem 031\n",
-    "- GRE Physics GR0177: Problem 056"
+    "- GRE Physics GR1777 Problem [047](https://study-astrophysics.com/gr1777-047/)\n",
+    "- GRE Physics GR0877 Problem 031\n",
+    "- GRE Physics GR0177 Problem 056"
    ]
   }
  ],
@@ -65,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
