--- a/Optics/michelson-morley.ipynb
+++ b/Optics/michelson-morley.ipynb
@@ -25,13 +25,24 @@
     "\n",
     "$$ \\large 2 d (n - 1) = m \\lambda $$\n",
     "\n",
+    "\n",
     "where\n",
     "\n",
-    "$m$: number of fringes\n",
+    "\n",
+    "- $d$: optical path length\n",
+    "\n",
+    "\n",
+    "- $n$: [index of refraction](https://study-astrophysics.com/refraction/)\n",
+    "\n",
+    "\n",
+    "- $m$: number of fringes\n",
+    "\n",
+    "\n",
+    "- $\\lambda$: wavelength of the laser \n",
     "\n",
     "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777: Problem 052"
+    "- GRE Physics GR1777: Problem [052](https://study-astrophysics.com/gr1777-052/)"
    ]
   },
   {
@@ -73,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
