Added a related problem (gr1777-061)

--- a/QuantumMechanics/pauli_exclusion_principle.ipynb
+++ b/QuantumMechanics/pauli_exclusion_principle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "28cad115",
+   "id": "369655ec",
    "metadata": {},
    "source": [
     "# Pauli Exclusion Principle"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25111e16",
+   "id": "540f6b02",
    "metadata": {},
    "source": [
     "---"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c45dd9",
+   "id": "145fba6d",
    "metadata": {},
    "source": [
     "## Pauli Exclusion Principle\n",
@@ -33,15 +33,13 @@
     "It is observed that the orthohelium states are lower in energy than the parahelium states since the total wavefunction for the electrons must be anti-symmetric due do the Pauli exclusion principle.\n",
     "\n",
     "\n",
-    "- If the electrons are on the average further apart, then there will be less shielding of the nucleus by the ground state electron, and the excited state electron will therefore be more exposed to the nucleus. This implies that it will be more tightly bound and of lower energy.\n",
-    "\n",
     "### Related Problems\n",
-    "- GRE Physics GR1777 Problem [061]()"
+    "- GRE Physics GR1777 Problem [061](https://study-astrophysics.com/gr1777-061/)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "48603fe0",
+   "id": "1760f933",
    "metadata": {},
    "source": [
     "---"
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f77dd45",
+   "id": "0bfb1a11",
    "metadata": {},
    "source": [
     "## Related Topics\n",
