--- a/QuantumMechanics/pauli_exclusion_principle.ipynb
+++ b/QuantumMechanics/pauli_exclusion_principle.ipynb
@@ -5,7 +5,7 @@
    "id": "369655ec",
    "metadata": {},
    "source": [
-    "# Pauli Exclusion Principle"
+    "# [Pauli Exclusion Principle](https://study-astrophysics.com/pauli-exclusion-principle/)"
    ]
   },
   {
