Tension and added a related problem (gr1777-079)

--- a/ClassicalMechanics/newtons_law.ipynb
+++ b/ClassicalMechanics/newtons_law.ipynb
@@ -80,6 +80,25 @@
     "\n",
     "$$ \\large F_{12} \\ = \\ - F_{21} $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4160bf26",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc94a21",
+   "metadata": {},
+   "source": [
+    "## Related Topics\n",
+    "\n",
+    "\n",
+    "### [Tension](https://study-astrophysics.com/tension/)"
+   ]
   }
  ],
  "metadata": {
@@ -98,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
