--- a/Electrodynamics/electrical_energy.ipynb
+++ b/Electrodynamics/electrical_energy.ipynb
@@ -50,7 +50,11 @@
    "source": [
     "## Power\n",
     "\n",
-    "$$ \\large P = I^2 R = IV = \\frac{V^2}{R} \\quad (\\because V = IR) $$"
+    "$$ \\large P = I^2 R = IV = \\frac{V^2}{R} \\quad (\\because V = IR) $$\n",
+    "\n",
+    "\n",
+    "### Related Problems\n",
+    "- GRE Physics GR0877 Problem [003](https://study-astrophysics.com/gr0877-003/)"
    ]
   },
   {
@@ -92,7 +96,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -106,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
