Added a related problem (GR0877-004)

--- a/Electrodynamics/lorentz_force.ipynb
+++ b/Electrodynamics/lorentz_force.ipynb
@@ -27,7 +27,9 @@
     "$$ \\large \\vec{F} \\ = \\ q \\vec{E} + q \\vec{v} \\times \\vec{B} $$\n",
     "\n",
     "\n",
-    "### Unit Analysis"
+    "### Related Problems\n",
+    "- GRE Physics GR1777 Problem [021](https://study-astrophysics.com/gr1777-021/)\n",
+    "- GRE Physics GR0877 Problem [004](https://study-astrophysics.com/gr0877-004/)"
    ]
   }
  ],
@@ -47,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
